--- a/myMainWindow/mainwindow.ui
+++ b/myMainWindow/mainwindow.ui
@@ -94,6 +94,9 @@
    <property name="text">
     <string>新建(&amp;N)</string>
    </property>
+   <property name="statusTip">
+    <string>新建文件</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
